@@ -88,6 +88,7 @@ unit-test-puppet4.7-ruby-2.3:
     - PUPPET_VERSION=4.7 bundle install
     - PUPPET_VERSION=4.7 bundle exec rake spec
 
+<<<<<<< HEAD
 acceptance-test:
   stage: test
   tags:
@@ -95,3 +96,11 @@ acceptance-test:
   script:
     - bundle install --no-binstubs --path=vendor
     - bundle exec rake beaker:suites
+
+acceptance-test-fips: 
+  stage: test
+  tags: 
+    - beaker
+  script: 
+    - bundle install --no-binstubs --path=vendor
+    - BEAKER_fips=yes bundle exec rake beaker:suites
